Sat Aug  7 13:33:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (vm_call0): fix for VM_METHOD_TYPE_NOTIMPLEMENTED.
	  [ruby-dev:41953]

Sat Aug  7 09:47:06 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: fix checking version of GCC.

Sat Aug  7 09:31:48 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (Init_pathname): fix number of arguments for
	  Pathname#chown.

Sat Aug  7 09:28:12 2010  Tanaka Akira  <akr@fsij.org>

	* test/ruby/envutil.rb (assert_normal_exit): use assert.  fix
	  faildesc.

	* test/pathname/test_pathname.rb (test_lchmod): test Pathname#lchmod
	  using assert_normal_exit.

Sat Aug  7 08:26:26 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_chown): Pathname#chown translated
	  from pathname.rb.

Sat Aug  7 02:09:04 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_lchmod): Pathname#lchmod translated
	  from pathname.rb.

Fri Aug  6 21:30:06 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_chmod): Pathname#chmod translated from
	  pathname.rb.

Fri Aug  6 20:13:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* rational.c (nurat_div): divided by infinity should be zero.

	* rational.c (nurat_div): divided by float zero should be
	  infinity.  [ruby-core:31626]

Fri Aug  6 18:59:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (realpath_rec): rb_str_modify depends on the length, so
	  resize instead.

Fri Aug  6 18:56:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (clean-ext): fixed directories to be removed.

Fri Aug  6 17:42:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/depend: add space at the begginig of @ignore_error.

	* lib/mkmf.rb: ditto.

Fri Aug  6 17:38:33 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (clean): add  prelude.c, config.log, and rbconfig.rb.

	* common.mk (distclean): remove encdb.h, config.log, and rbconfig.rb.
