@@ -1,3 +1,8 @@
+Sat Aug  7 13:59:19 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/pathname/pathname.c (path_sub_ext): don't clobber shared string.
+	  [ruby-core:31640]
+
 Sat Aug  7 13:33:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* vm_eval.c (vm_call0): fix for VM_METHOD_TYPE_NOTIMPLEMENTED.
